	* CORE: Added a Dao.getConnectionSource() method to assign with the RuntimeExceptionDao.  Thanks to glenviewjeff.	
	* CORE: Added closeQuietly() methods for all close() methods in a number of classes/interfaces.
	* CORE: Added Dao.executeRawNoArgs() method for executing raw statements with no arguments.  Necessary for JDBC fix.
	* ANDROID: Added support for auto-commit under Android using transactions.  Thanks to Chad Schultz.
	* ANDROID: Added getCount() and getPosition() cursor methods AndroidDatabaseResults.  Thanks to Andrey.
	* JDBC: Fixed some problems with the OracleDatabaseType.  Work in progress.  Thanks much to Stew.
	* JDBC: Added OTHER to the SqlType enum for custom persisters.  Thanks to Mark Rogers.
	* JDBC: Added a DatabaseConnection.executeStatement() method which uses Statement.execute() for SQL. Thanks to Stew.
	* JDBC: Fixed a problem with Oracle where we were asking for column info too early.  Thanks to Stew.  Bug #3570129.

4.41: 6/6/2012 (svn r2575)
	* CORE: Added java.sql.Date and java.sql.Timestmp data persister types.  java.util.Date is still recommended.
	* CORE: Added version checking which logs errors if core, jdbc, and android versions do not match. Thanks to nybblr.
	* CORE: Added a Dao.getRawRowMapper() for mapping result string to an object.
	* CORE: Added some handling of ForeignCollection with the javax.persistence.* annotations.
	* CORE: Fixed problem with maxForeignAutoRefreshLevel that made it ~worthless. Thanks to Andrea Sprega. Bug #3530801.
	* ANDROID: Fixed the updating of serializable and other byte[] fields.  Thanks to Yossi Wasserman.  Bug #3527685.

4.40: 4/16/2012 (svn r2516)
	* CORE: Fixed a couple of missing field configuration entries.   Thanks to Jeremy Stone.  Bug #3518474.
	* CORE: Fixed a problem that was causing FieldType to always use reflection.  Thanks to Jeremy Stone.  Bug #3518472.
	* ANDROID: Big performance bug fix when creating DAOs. Foreign fields always used reflection instead of table configs.
